[package]
name = "tamamo-x"
version = "0.1.0"
edition = "2024"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Media",
    "Win32_UI_WindowsAndMessaging"
]

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
eframe = { version = "0.31.0", features = ["default"] }
egui_extras = { version = "0.31.0", features = ["image"] }
image = { version = "0.25.5", features = ["png"] }
rfd = "0.15.2"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "http2", "json", "native-tls"] }
serde = "1.0.228"
serde_json = "1.0.148"
sha2 = "0.10.8"
